# optimal_control

./: .gitignore  LICENSE  README.md
double_integrator/: CMakeLists.txt  package.xml
double_integrator/di_lqg/: CMakeLists.txt  package.xml
double_integrator/di_lqg/include/: kf.hpp
double_integrator/di_lqg/src/: kf.cpp  lqg_node.cpp
double_integrator/di_lqr_inf/: CMakeLists.txt  package.xml
double_integrator/include/: double_integrator.hpp  sim.hpp  sim_manager_node.hpp
double_integrator/include/controllers/: controller.hpp  dlqr.hpp
double_integrator/scripts/: bokeh_plotter.py
double_integrator/src/: double_integrator.cpp  main.cpp  sim.cpp  sim_manager_node.cpp
double_integrator/src/controllers/: dlqr.cpp
meshcat_bridge/: CMakeLists.txt  package.xml
meshcat_bridge/scripts/: bokeh_plotter.py  meshcat_visualizer.py
meshcat_bridge/src/: meshcat_provider.cpp
